letter-spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -778,6 +778,7 @@ img {
 
   line-height: calc(16/14);
   color: var(--title-color);
+  letter-spacing: inherit;
 
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
